fix comment text align

--- a/source/css/imaegoo.styl
+++ b/source/css/imaegoo.styl
@@ -169,3 +169,6 @@ article.article
 
 #busuanzi_container_page_pv
     display: none !important
+
+.card .v .vlist .vcard .vcontent
+    text-align: inherit
